# workspaces-rs

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  workspaces.rs
