[package]
name = "workspaces-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI tool to switch between directories"
repository = "https://github.com/andreadev-it/workspaces-rs"
keywords = ["cli", "tool", "directories", "folders", "navigating"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Andrea Dragotta"]

[[bin]]
name = "workspaces"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
directories = "0.4.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
colored = "2.1.0"
